# api/src/routes/docs/swagger-output.json
@@ -225,6 +225,50 @@
             "description": ""
           }
         }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id_events",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "id_groups",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id_events",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "id_groups",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
       }
     },
     "/admin/events/{id_events}/groups/{id_groups}/people/{id}": {
